[package]
name = "task2ntfy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
task-hookrs = "0.7.0"
serde_json = "1.0.89"
serde = { version = "1.0.149", features = ["derive"] }
chrono = "0.4.23"
clap = { version = "4.1.3", features = ["derive"] }
ureq = "2.6.2"

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1